# pysensortherm

./: .gitignore  LICENSE  README.md  README.rst  main.py  pyproject.toml
src/: setup_interactive.py
src/sensortherm/: __init__.py  metis.py
